--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Flask==2.3.2
-Pillow==10.0.0
-srt==3.5.3
-gunicorn==20.1.0
+flask
+pillow
+srt
+arabic-reshaper
+python-bidi
+gunicorn==20.1.0  # Explicit version for stability
