--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 flask==2.3.2
 pillow==10.0.0
-srt==3.5.2
-arabic-reshaper==2.1.4
+pysubs2==1.6.0
+arabic-reshaper==3.0.0
 python-bidi==0.4.2
-gunicorn==20.1.0
+python-dotenv==1.0.0
